--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
     <meta name="description" content="Eduardo Hernández Presentation Page">
     <meta name="author" content="Eduardo Hernandez">
 
-    <title>bor.re</title>
+    <title>Eduardo Hernández</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link href="borre.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
   </head>
 
   <body>
@@ -24,7 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Eduardo Hernández</a>
+              <a class="navbar-brand" href="#">Borre</a>
             </div>
           </div>
         </nav>
@@ -37,7 +53,7 @@
             <div class="col-md-8">
               <h3 class="text-center">Eduardo Hernández</h3>
               <div id="about">
-                Eduardo is an engineer in computer science who is always interested in new technologies, considers himself a problem solver oriented to business, Eduardo is a 100% self-taught person, quality that has taken him across various sectors and positions within of the industry.
+                Eduardo is an engineer in computer science who is always interested in new technologies, considers himself a problem solver oriented to business. Eduardo is a 100% self-taught person, quality that has taken him across various sectors and positions within of the industry.
                 <br><br>
                 Eduardo started as a software engineer, later becoming a devops engineer and currently positioning himself as an OpenStack Sales Engineer at SUSE in Mexico, where he uses the skills he has learned throughout his industry years to meet the cloud needs of his clients.
               </div>
