now I work on Huawei, not in SUSE, and some improvements on the image sizes

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <div class="col-md-8">
               <h3 class="text-center">Eduardo Hernández</h3>
               <div id="about">
-                Eduardo is an engineer in computer science who is always interested in new technologies, considers himself a problem solver oriented to business. Eduardo is a 100% self-taught person, quality that has taken him across various sectors and positions within of the industry.
+                Eduardo is an engineer in computer science who is always interested in new technologies, he considers himself a problem solver oriented to business. Eduardo is a 100% self-taught person, quality that has taken him across various sectors and positions within of the industry.
                 <br><br>
-                Eduardo started as a software engineer, later becoming a devops engineer and currently positioning himself as an OpenStack Sales Engineer at SUSE in Mexico, where he uses the skills he has learned throughout his industry years to meet the cloud needs of his clients.
+                Eduardo started his career as a software engineer, later became a DevOps Engineer involving himself on research and development on OpenStack. After that, he became a OpenStack Sales Engineer and currently positioning himself as a Sales Solution Manager for the Cloud division in Latin America at Huawei. Where he uses the skills that learned throughout his industry years in order to meet the cloud needs of his clients and help Huawei to enrich lives through communication.
               </div>
             </div>
             <div id="social" class="col-md-8">
@@ -59,7 +59,7 @@
                 <a href="https://www.facebook.com/EHernandezC" target="_blank"><img src="img/Facebook.png" width="35px"></a>
                 <a href="https://github.com/Borre" target="_blank"><img src="img/Github.png" width="35px"></a>
                 <a href="https://www.linkedin.com/in/ehernandezc/" target="_blank"><img src="img/Linkedin.png" width="35px"></a>
-                <a href="https://plus.google.com/+EduardoHern%C3%A1ndez87" target="_blank"><img src="img/Google+.png" width="35px"></a>
+                <a href="https://plus.google.com/+EduardoHern%C3%A1ndez87" target="_blank"><img src="img/Google.png" width="35px"></a>
               </div>
             </div>
           </div>
