--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
             <div id="social" class="col-md-8">
               <h4 class="text-center">Contact Me!</h4>
               <div id="contact" class="text-center">
-                <a href="https://twitter.com/borre" target="_blank"><img src="img/Twitter.png" width="35px"></a>
-                <a href="https://www.facebook.com/EHernandezC" target="_blank"><img src="img/Facebook.png" width="35px"></a>
-                <a href="https://github.com/Borre" target="_blank"><img src="img/Github.png" width="35px"></a>
-                <a href="https://www.linkedin.com/in/ehernandezc/" target="_blank"><img src="img/Linkedin.png" width="35px"></a>
-                <a href="https://plus.google.com/+EduardoHern%C3%A1ndez87" target="_blank"><img src="img/Google.png" width="35px"></a>
+                <a href="https://twitter.com/borre" target="_blank"><img src="img/twitter.png" width="35px" alt="Contact me via Twitter!"></a>
+                <a href="https://www.facebook.com/EHernandezC" target="_blank"><img src="img/facebook.png" width="35px" alt="I don't really use this too often"></a>
+                <a href="https://github.com/Borre" target="_blank"><img src="img/github.png" width="35px" alt="My code!"></a>
+                <a href="https://www.linkedin.com/in/ehernandezc/" target="_blank"><img src="img/linkedin.png" width="35px" alt="Stuff for recruiters"></a>
+                <a href="https://plus.google.com/+EduardoHern%C3%A1ndez87" target="_blank"><img src="img/google.png" width="35px" alt="it's almost dead but, why not?"></a>
               </div>
             </div>
           </div>
           <hr class="featurette-divider">
           <footer class="footer text-center">
-            <p>Eduardo Hernández 2017</p>
+            <p>Eduardo Hernández 2018</p>
           </footer>
         </div>
       </div>
